0.25.1	UNRELEASED

 * Fix AssertionError when accessing ref names with length matching binary
   hash length (e.g., 32 bytes for SHA-256). (Jelmer Vernooĳ, #2040)

 * Add ``parse_commit_broken`` function to parse broken commits.
   (Valentin Lorentz, Jelmer Vernooĳ)

 * Add basic ``dulwich.aiohttp`` module that provides
   server support. (Jelmer Vernooĳ)

 * Add callback-based authentication support for HTTP and proxy authentication
   in ``Urllib3HttpGitClient``. This allows applications to handle
   authentication dynamically without intercepting exceptions. Callbacks
   receive the authentication scheme information (via WWW-Authenticate or
   Proxy-Authenticate headers) and can provide credentials or cancel.
   (Jelmer Vernooĳ, #822)

0.25.0	2025-12-17

**PLEASE NOTE**: This release makes quite a lot of changes to public APIs. This
is ahead of a 1.0 release, after which API changes will be kept backwards
compatible.

 * Split out worktree module from porcelain into separate ``dulwich.worktree``
   module for better code organization. (Jelmer Vernooĳ, #2037)

 * Split porcelain module into separate submodules: ``dulwich.porcelain.tags``,
   ``dulwich.porcelain.notes``, ``dulwich.porcelain.submodule``, and
   ``dulwich.porcelain.lfs``. Main porcelain module re-exports all functions
   for backward compatibility. (Jelmer Vernooĳ, #2032)

 * Ensure ``dulwich.porcelain`` package is properly installed as a directory
   structure with submodules. (Jelmer Vernooĳ, #2035)

 * Add tests for consistent license preamble across codebase and prevent
   ``os.environ`` usage in lower layers. (Jelmer Vernooĳ, #2033)

 * Add ``__all__`` exports to all modules for better API clarity and wildcard
   import support. (Jelmer Vernooĳ, #2022)

 * Fix ParamikoSSHVendor interface compatibility with SSHVendor. (Jelmer Vernooĳ, #2028)

 * Add fallback when HEAD is missing in dumb HTTP protocol, improving
   compatibility with repositories that don't have a HEAD reference.